// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Syncs Both empty 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Syncs Both match 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Syncs store1 empty 1`] = `
[
  "000000000005DK@@",
  [
    [
      "000000000005DK@@",
      {
        "t1": [
          "000000000005DK@@",
          {
            "r1": [
              "000000000005DK@@",
              {
                "c1": [
                  "000000000005DK@@",
                  1,
                  4101790724,
                ],
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              2451863536,
            ],
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          1908558475,
        ],
        "t2": [
          "000000000005DK@@",
          {
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          569789438,
        ],
      },
      748352925,
    ],
    [
      "000000000005DK@@",
      {
        "v1": [
          "000000000005DK@@",
          1,
          4101790724,
        ],
        "v2": [
          "000000000005DK@@",
          2,
          4117505159,
        ],
      },
      2371805808,
    ],
  ],
  2713982957,
]
`;

exports[`Syncs store1 missing cell 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              1298137580,
            ],
          },
          3050060808,
        ],
      },
      2045603528,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2045603528,
]
`;

exports[`Syncs store1 missing row 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          150373007,
        ],
      },
      955698158,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  955698158,
]
`;

exports[`Syncs store1 missing table 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "000000000005DK@@",
          {
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          569789438,
        ],
      },
      117146317,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  117146317,
]
`;

exports[`Syncs store1 missing tables 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "000000000005DK@@",
      {
        "t1": [
          "000000000005DK@@",
          {
            "r1": [
              "000000000005DK@@",
              {
                "c1": [
                  "000000000005DK@@",
                  1,
                  4101790724,
                ],
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              2451863536,
            ],
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          1908558475,
        ],
        "t2": [
          "000000000005DK@@",
          {
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          569789438,
        ],
      },
      748352925,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  1727940335,
]
`;

exports[`Syncs store1 missing value 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "000000000005DK@@",
          1,
          4101790724,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1810234309,
    ],
  ],
  1810234309,
]
`;

exports[`Syncs store1 missing values 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "000000000005DK@@",
      {
        "v1": [
          "000000000005DK@@",
          1,
          4101790724,
        ],
        "v2": [
          "000000000005DK@@",
          2,
          4117505159,
        ],
      },
      2371805808,
    ],
  ],
  1573120302,
]
`;

exports[`Syncs store2 empty 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Syncs store2 missing cell 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "Hc2DO@100008DKS9",
      {
        "t1": [
          "Hc2DO@100008DKS9",
          {
            "r1": [
              "Hc2DO@100008DKS9",
              {
                "c1": [
                  "000000000005DK@@",
                  1,
                  4101790724,
                ],
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              1452787473,
            ],
          },
          1090362991,
        ],
      },
      3474304331,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3474304331,
]
`;

exports[`Syncs store2 missing row 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "Hc2DO@100008DKS9",
      {
        "t1": [
          "Hc2DO@100008DKS9",
          {
            "r1": [
              "000000000005DK@@",
              {
                "c1": [
                  "000000000005DK@@",
                  1,
                  4101790724,
                ],
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              2451863536,
            ],
            "r2": [
              "Hc2DO@100008DKS9",
              {
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              4143335884,
            ],
          },
          2241805244,
        ],
      },
      2459899449,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2459899449,
]
`;

exports[`Syncs store2 missing table 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "Hc2DO@100008DKS9",
      {
        "t1": [
          "000000000005DK@@",
          {
            "r1": [
              "000000000005DK@@",
              {
                "c1": [
                  "000000000005DK@@",
                  1,
                  4101790724,
                ],
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              2451863536,
            ],
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          1908558475,
        ],
        "t2": [
          "Hc2DO@100008DKS9",
          {
            "r2": [
              "Hc2DO@100008DKS9",
              {
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              4143335884,
            ],
          },
          3584768713,
        ],
      },
      3773145698,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3773145698,
]
`;

exports[`Syncs store2 missing tables 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "Hc2DO@100008DKS9",
      {
        "t1": [
          "Hc2DO@100008DKS9",
          {
            "r1": [
              "Hc2DO@100008DKS9",
              {
                "c1": [
                  "Hc2DO@100008DKS9",
                  1,
                  3825858970,
                ],
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              463105251,
            ],
            "r2": [
              "Hc2DO@100008DKS9",
              {
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              4143335884,
            ],
          },
          2474940648,
        ],
        "t2": [
          "Hc2DO@100008DKS9",
          {
            "r2": [
              "Hc2DO@100008DKS9",
              {
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              4143335884,
            ],
          },
          3584768713,
        ],
      },
      111103868,
    ],
    [
      "000000000005DK@@",
      {
        "v1": [
          "000000000005DK@@",
          1,
          4101790724,
        ],
        "v2": [
          "000000000005DK@@",
          2,
          4117505159,
        ],
      },
      2371805808,
    ],
  ],
  2344725772,
]
`;

exports[`Syncs store2 missing value 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@100008DKS9",
      {
        "v1": [
          "Hc2DO@100008DKS9",
          1,
          3825858970,
        ],
        "v2": [
          "000000000005DK@@",
          2,
          4117505159,
        ],
      },
      2662412556,
    ],
  ],
  2662412556,
]
`;

exports[`Syncs store2 missing values 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "000000000005DK@@",
      {
        "t1": [
          "000000000005DK@@",
          {
            "r1": [
              "000000000005DK@@",
              {
                "c1": [
                  "000000000005DK@@",
                  1,
                  4101790724,
                ],
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              2451863536,
            ],
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          1908558475,
        ],
        "t2": [
          "000000000005DK@@",
          {
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          569789438,
        ],
      },
      748352925,
    ],
    [
      "Hc2DO@100008DKS9",
      {
        "v1": [
          "Hc2DO@100008DKS9",
          1,
          3825858970,
        ],
        "v2": [
          "Hc2DO@100008DKS9",
          2,
          2627627285,
        ],
      },
      4006401115,
    ],
  ],
  3260424646,
]
`;
